crates/fig-parser/tests/snapshots/integration_tests__literals__floats.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: floats
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: a
              ty: ~
              value:
                FloatLiteral:
                  digits: "0.0"
                  exponent: ~
                  suffix: ~
          - Let:
              annotations: []
              name: b
              ty: ~
              value:
                FloatLiteral:
                  digits: "1.0"
                  exponent: ~
                  suffix: ~
          - Let:
              annotations: []
              name: c
              ty: ~
              value:
                FloatLiteral:
                  digits: "3.14"
                  exponent: ~
                  suffix: ~
          - Let:
              annotations: []
              name: d
              ty: ~
              value:
                FloatLiteral:
                  digits: "2.71828"
                  exponent: ~
                  suffix: ~
          - Let:
              annotations: []
              name: e
              ty: ~
              value:
                FloatLiteral:
                  digits: "100.001"
                  exponent: ~
                  suffix: ~
          - Let:
              annotations: []
              name: f
              ty: ~
              value:
                FloatLiteral:
                  digits: "0.5"
                  exponent: ~
                  suffix: ~
          - Let:
              annotations: []
              name: g
              ty: ~
              value:
                FloatLiteral:
                  digits: "999.999"
                  exponent: ~
                  suffix: ~
          - Pass
