crates/fig-parser/tests/snapshots/integration_tests__literals__strings_basic.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: strings
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: empty
              ty: ~
              value:
                StringLiteral: ""
          - Let:
              annotations: []
              name: hello
              ty: ~
              value:
                StringLiteral: hello
          - Let:
              annotations: []
              name: world
              ty: ~
              value:
                StringLiteral: world
          - Let:
              annotations: []
              name: sentence
              ty: ~
              value:
                StringLiteral: The quick brown fox
          - Let:
              annotations: []
              name: with_spaces
              ty: ~
              value:
                StringLiteral: hello world
          - Pass
