crates/fig-parser/tests/snapshots/integration_tests__literals__strings_interpolated.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: strings
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: name
              ty: ~
              value:
                StringLiteral: World
          - Let:
              annotations: []
              name: x
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "42"
                  suffix: ~
          - Pass
